# backend/src/routes/user.routes.ts
@@ -1,0 +1,15 @@
+import { Router } from "express";
+
+import {
+  registerUser,
+  loginUser
+} from "../controllers/user.controller";
+
+const router = Router();
+
+router.post('/register', registerUser);
+
+router.post('/login', loginUser);
+
+
+export default router;
